src/components/ContactSection/ContactSection.module.scss
@use '../../sass/main.scss' as *;

.contactSection {
	width: 100vw;
	height: 85vh;
	padding-top: pxToRem(87px);
	padding-bottom: pxToRem(106px);
	color: $text-dark-color;
	background-color: $bg-light-color;

	@include flexbox();
	@include align-items(center);
	@include justify-content(center);

	.contactLeft {
		width: 50%;

		@include breakpoint('s') {
			display: none;
		}

		@include breakpoint('xl') {
			@include flexbox;
			@include align-items(center);
			@include justify-content(center);
		}
		.imgWrapper {
			max-width: 550px;
			text-align: center;
			@include underlay(underlayedImg, right);

			@include breakpoint('m') {
				.underlayedImg {
					right: -10%;
				}
			}

			img {
				width: 100%;
				max-width: 480px;
				max-height: 717px;
			}
			.underlayedImg {
				max-height: 765px;
				max-width: 457px;
			}
		}
	}

	.contactRight {
		width: 50%;
		padding-right: pxToRem(30px);

		.contactFormWrapper {
			width: 100%;
			@include flexbox(column);
			@include align-items(center);
			@include justify-content(center);

			h2 {
				margin-bottom: 20px;
				max-width: pxToRem(572px);
			}
			p {
				margin-bottom: 50px;
				max-width: pxToRem(590px);
			}
			.highlight {
				color: $text-highlight-color;
			}
		}

		.feedback {
			width: 50%;
			text-align: center;
			@include flexbox(column);
			@include align-items(center);
			@include justify-content(center);

			img {
				max-width: 50px;
				max-height: 50px;
				margin-bottom: pxToRem(25px);
			}
			p {
				max-width: 590px;
				margin-bottom: pxToRem(100px);
			}
			.h1 {
				margin-bottom: pxToRem(50px);
			}
			&.error {
				color: $text-orange-color;
			}
		}
	}
}

